Fix: margin collapse

--- a/dev-life-ghost-theme/src/assets/css/navigation.scss
+++ b/dev-life-ghost-theme/src/assets/css/navigation.scss
@@ -2,5 +2,6 @@
    Navigation - CSS for top level site navigation
    ========================================================================== */
 .site-navigation {
+  overflow: hidden;
   background-color: #A4B7BB;
 }
